--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,99 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-header {
+  height: 40px;
+  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+.header-img {
+  height: 40px;
+  width: 60px;
+  padding: 10px;
+}
+
+.header-text {
+  color: rgb(255, 255, 255);
+}
+
+.form {
+  display: grid;
+  /* padding: 60px 400px; */
+  margin: 40px 200px;
+  gap: 10px;
+  grid-template: 40px 40px / 1fr 1fr;
+}
+
+.form-button {
+  grid-column: 1 / -1;
+
+  border-radius: 5px;
+    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.form-input {
+  border-radius: 5px;
+  border: 1px solid #D5D4D8;
+  text-indent: 5px;
+}
+
+.img-block {
+  display: flex;
+  
+}
+
+.meme {
+  position: relative;
+  margin: 10px auto;
+  max-width: 600px;
+  grid-column: 1 / -1;
+}
+
+.meme--image {
+  width: 600px;
+  height: 500px;
+  border-radius: 3px;
+  
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  word-wrap: break-word;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow:
+      2px 2px 0 #000,
+      -2px -2px 0 #000,
+      2px -2px 0 #000,
+      -2px 2px 0 #000,
+      0 2px 0 #000,
+      2px 0 0 #000,
+      0 -2px 0 #000,
+      -2px 0 0 #000,
+      2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
